--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@excalidraw/excalidraw": "^0.17.6",
     "@pdfme/common": "^5.3.8",
     "@pdfme/generator": "^5.3.8",
+    "@pdfme/schemas": "^5.3.8",
     "@pdfme/ui": "^5.3.8",
     "@tailwindcss/vite": "^4.0.9",
     "fabric": "^6.6.1",
@@ -35,6 +35,7 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
